<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.clevertap.apns</groupId>
    <artifactId>apns-http2</artifactId>
    <version>1.0.3-incubator-java10</version>

    <name>apns-http2</name>
    <description>A library for communicating with the Apple Push Gateway in HTTP/2.</description>
    <url>https://github.com/CleverTap/apns-http2</url>

    <dependencies>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.9.6</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.9.6</version>
        </dependency>

        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.4</version>
        </dependency>

        <!--<dependency>-->
            <!--<groupId>com.squareup.okhttp3</groupId>-->
            <!--<artifactId>okhttp</artifactId>-->
            <!--<version>3.2.0</version>-->
        <!--</dependency>-->

        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-alpn-java-client -->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-alpn-java-client</artifactId>-->
            <!--<version>9.4.12.v20180830</version>-->
        <!--</dependency>-->

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>10</source>
                    <target>10</target>
                    <compilerArgs>
                        <!--<arg>&#45;&#45;add-opens</arg>-->
                        <!--<arg>jdk.incubator.httpclient/jdk.incubator.http=ALL-UNNAMED</arg>-->
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.httpclient</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                      <id>attach-sources</id>
                      <goals>
                        <goal>jar-no-fork</goal>
                      </goals>
                    </execution>
                  </executions>
            </plugin>
            <!--<plugin>-->
              <!--<groupId>org.apache.maven.plugins</groupId>-->
              <!--<artifactId>maven-javadoc-plugin</artifactId>-->
              <!--<version>2.7</version>-->
              <!--<executions>-->
                <!--<execution>-->
                  <!--<id>attach-javadocs</id>-->
                  <!--<goals>-->
                    <!--<goal>jar</goal>-->
                  <!--</goals>-->
                <!--</execution>-->
              <!--</executions>-->
            <!--</plugin>-->
        </plugins>
    </build>

    <!--<distributionManagement>-->
        <!--<repository>-->
            <!--<id>bintray-clevertap-Maven</id>-->
            <!--<name>clevertap-Maven</name>-->
            <!--<url>https://api.bintray.com/maven/clevertap/Maven/apns-http2/;publish=1</url>-->
        <!--</repository>-->
    <!--</distributionManagement>-->

    <!--<scm>-->
        <!--<connection>scm:git:git://github.com/CleverTap/apns-http2.git</connection>-->
        <!--<developerConnection>scm:git:ssh://github.com:CleverTap/apns-http2.git</developerConnection>-->
        <!--<url>http://github.com/CleverTap/apns-http2/tree/master</url>-->
    <!--</scm>-->

    <developers>
        <developer>
            <name>Jude Pereira</name>
            <email>jude@clevertap.com</email>
            <organization>CleverTap</organization>
            <organizationUrl>https://clevertap.com</organizationUrl>
        </developer>
        <developer>
            <name>Maciej Radziński</name>
            <email>maciej.radzinski@idemia.com</email>
            <organization>Idemia</organization>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The BSD 3-Clause License</name>
            <url>https://opensource.org/licenses/BSD-3-Clause</url>
        </license>
    </licenses>
</project>
